# Quaternion-based-UKF

./: CMakeLists.txt  DataLoader.cpp  DataLoader.h  LICENSE  Logger.cpp  Logger.h  MARGData.cpp  MARGData.h  README.md  kalmanfilter.cpp  kalmanfilter.h  main.cpp  marg_log.csv  utils.cpp  utils.h
